Restored functions test.

--- a/ext/test/index.html
+++ b/ext/test/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>RetroTxt Extension Unit Tests</title>
+  <title>RetroTxt MV3 Extension Unit Tests</title>
   <link rel="stylesheet" href="qunit.css" />
 </head>
 
@@ -16,6 +16,7 @@
   <!-- TODO: complete -->
   <!-- <script src="tests-eventpage.js"></script> -->
   <!-- <script src="tests-functions.js"></script> -->
+  <script src="tests-functions.js"></script>
   <script src="tests-parse_ansi-sequences.js"></script>
   <script src="tests-parse_ansi.js"></script>
   <script src="tests-parse_dos.js"></script>
