--- a/ext/test/index.html
+++ b/ext/test/index.html
@@ -13,19 +13,24 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="qunit.js"></script>
-  <!-- TODO: complete -->
-  <!-- <script src="tests-eventpage.js"></script> -->
-  <!-- <script src="tests-functions.js"></script> -->
-  <script src="tests-functions.js"></script>
+  <script src="tests-sw.js"></script>
+  <script src="tests-helpers.js"></script>
   <script src="tests-parse_ansi-sequences.js"></script>
   <script src="tests-parse_ansi.js"></script>
   <script src="tests-parse_dos.js"></script>
   <script src="tests-retrotxt.js"></script>
   <script src="../scripts/sw/helpers.js"></script>
+  <script src="../scripts/sw/action.js"></script>
+  <script src="../scripts/sw/downloads.js"></script>
+  <script src="../scripts/sw/extension.js"></script>
+  <script src="../scripts/sw/menu.js"></script>
+  <script src="../scripts/sw/security.js"></script>
+  <script src="../scripts/sw/session.js"></script>
+  <script src="../scripts/sw/storage.js"></script>
+  <script src="../scripts/sw/tabs.js"></script>
+  <script src="../scripts/sw/toolbar.js"></script>
   <script src="../scripts/checks.js"></script>
   <script src="../scripts/encoding.js"></script>
-  <!-- <script src="../scripts/eventpage.js"></script> -->
-  <script src="../scripts/helpers.js"></script>
   <script src="../scripts/helpers.js"></script>
   <script src="../scripts/retrotxt.js"></script>
   <script src="../scripts/parse_ansi.js"></script>
