Fixed Options reloading on new tabs click.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -34,19 +34,19 @@
               </div>
               <div id="navbarMenuHeroA" class="navbar-menu">
                 <div class="navbar-end">
-                  <a class="navbar-item is-active" id="hero0" href="">
+                  <a class="navbar-item is-active" id="hero0" href="#">
                     Home
                   </a>
-                  <a class="navbar-item" id="hero4" href="">
+                  <a class="navbar-item" id="hero4" href="#">
                     Fonts
                   </a>
-                  <a class="navbar-item" id="hero5" href="">
+                  <a class="navbar-item" id="hero5" href="#">
                     Display
                   </a>
-                  <a class="navbar-item" id="hero6" href="">
+                  <a class="navbar-item" id="hero6" href="#">
                     Settings
                   </a>
-                  <a class=" navbar-item" id="hero7" href="">
+                  <a class="navbar-item" id="hero7" href="#">
                     Documentation
                   </a>
                   <span class="navbar-item">
@@ -4066,9 +4066,9 @@
           <nav class="tabs">
             <div class="container">
               <ul>
-                <li><a class="navbar-item" id="hero1" href="">Credits</a></li>
-                <li><a class="navbar-item" id="hero2" href="">Samples</a></li>
-                <li><a class="navbar-item" id="hero3" href="">Useful</a></li>
+                <li><a class="navbar-item" id="hero1" href="#">Credits</a></li>
+                <li><a class="navbar-item" id="hero2" href="#">Samples</a></li>
+                <li><a class="navbar-item" id="hero3" href="#">Useful</a></li>
                 <li id="unittest" style="display: none;">
                   <a href="../test/index.html?hidepassed"><svg role="img" class="material-icons" target="_blank">
                       <use xlink:href="../assets/svg/material-icons.svg#bug_report"></use>
