Replaced href="#" with the more descriptive href="#top".

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -34,19 +34,19 @@
               </div>
               <div id="navbarMenuHeroA" class="navbar-menu">
                 <div class="navbar-end">
-                  <a class="navbar-item is-active" id="hero0" href="#">
+                  <a class="navbar-item is-active" id="hero0" href="#top">
                     Home
                   </a>
-                  <a class="navbar-item" id="hero4" href="#">
+                  <a class="navbar-item" id="hero4" href="#top">
                     Fonts
                   </a>
-                  <a class="navbar-item" id="hero5" href="#">
+                  <a class="navbar-item" id="hero5" href="#top">
                     Display
                   </a>
-                  <a class="navbar-item" id="hero6" href="#">
+                  <a class="navbar-item" id="hero6" href="#top">
                     Settings
                   </a>
-                  <a class="navbar-item" id="hero7" href="#">
+                  <a class="navbar-item" id="hero7" href="#top">
                     Documentation
                   </a>
                   <span class="navbar-item">
@@ -95,9 +95,9 @@
               <div class="notification is-info">
                 <button id="updateNoticeBtn" class="delete" title="Close update tab"></button>
                 RetroTxt is up to date, so
-                <a href="#" id="changesLink">see what is new</a>
+                <a href="#top" id="changesLink">see what is new</a>
               </div>
-              <div class="notification is-primary">
+              <div class="notification is-primary" id="enjoyRetroTxt">
                 <p id="5starFirefox" style="display: none;">
                   Enjoy RetroTxt? It would be fantastic for the exposure to
                   <a href="https://addons.mozilla.org/en-US/firefox/addon/retrotxt/reviews/">leave a 5-star rating on
@@ -4066,16 +4066,16 @@
           <nav class="tabs">
             <div class="container">
               <ul>
-                <li><a class="navbar-item" id="hero1" href="#">Credits</a></li>
-                <li><a class="navbar-item" id="hero2" href="#">Samples</a></li>
-                <li><a class="navbar-item" id="hero3" href="#">Useful</a></li>
+                <li><a class="navbar-item" id="hero1" href="#top">Credits</a></li>
+                <li><a class="navbar-item" id="hero2" href="#top">Samples</a></li>
+                <li><a class="navbar-item" id="hero3" href="#top">Useful</a></li>
                 <li id="unittest" style="display: none;">
                   <a href="../test/index.html?hidepassed"><svg role="img" class="material-icons" target="_blank">
                       <use xlink:href="../assets/svg/material-icons.svg#bug_report"></use>
                     </svg> &nbsp;Tests</a>
                 </li>
                 <li id="reload" style="display: none;">
-                  <a href="#" class="reload-link"><svg role="img" class="material-icons">
+                  <a href class="reload-link"><svg role="img" class="material-icons">
                       <use xlink:href="../assets/svg/material-icons.svg#autorenew"></use>
                     </svg> &nbsp;Reload</a>
                 </li>
