Tweaked RetroTxt is up to date notice.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -90,12 +90,11 @@
                 <span id="program"></span>
               </span>
             </h2>
-            <p class="is-size-7" id="os"></p>
+            <p class="is-size-7 mb-2" id="os"></p>
             <div class="notice" style="display: none;" id="updateNotice">
               <div class="notification is-info">
                 <button id="updateNoticeBtn" class="delete" title="Close update tab"></button>
-                RetroTxt is up to date, so
-                <a href="#top" id="changesLink">see what is new</a>
+                RetroTxt is up to date! <a href="#top" id="changesLink">See what is new</a>
               </div>
               <div class="notification is-primary" id="enjoyRetroTxt">
                 <p id="5starFirefox" style="display: none;">
