Toolbar icon setting. To select dark or light mode button.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3926,6 +3926,36 @@
                   </h2>
                 </div>
                 <hr>
+                <!-- toolbar icon -->
+                <div>
+                  <h2 class="title has-text-dark is-size-6 columns">
+                    <div class="column">
+                      Toolbar icon
+                      <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">Switch the RetroTxt toolbar
+                        button between the dark and light mode icons. On some systems, dark mode detection isn't
+                        reliable.</p>
+                      <p class="subtitle has-text-weight-bold has-text-dark is-size-7">recommend <span
+                          class="has-text-info">automatic</span></p>
+                      <form name="toolbaricon" id="toolbarForm">
+                        <div class="control">
+                          <label class="radio">
+                            <input type="radio" name="toolbaricon" value="auto">
+                            Automatic
+                          </label>
+                          <label class="radio">
+                            <input type="radio" name="toolbaricon" value="dark">
+                            Dark
+                          </label>
+                          <label class="radio">
+                            <input type="radio" name="toolbaricon" value="light">
+                            Light
+                          </label>
+                        </div>
+                      </form>
+                    </div>
+                  </h2>
+                </div>
+                <hr>
                 <!-- information header -->
                 <div>
                   <h2 class="title has-text-dark is-size-6 columns">
@@ -3947,7 +3977,7 @@
                           </label>
                           <label class="radio">
                             <input type="radio" name="infoheader" value="off">
-                            <u>Off</u>
+                            Off
                           </label>
                         </div>
                       </form>
