split the settings tab to 2 panes.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3814,9 +3814,9 @@
         <!-- Settings content -->
         <div class="tabcontent container" id="content6">
           <div class="columns">
-            <div class="column is-half is-offset-one-quarter">
+            <div class="column is-half">
               <div class="box">
-                <h1 class="title has-text-black-ter is-size-3 mt-4">Settings</h1>
+                <h1 class="title has-text-black-ter is-size-3 mt-4">Feature</h1>
                 <!-- option themes -->
                 <div>
                   <h2 class="title has-text-dark is-size-6 columns">
@@ -3927,7 +3927,11 @@
                     </div>
                   </h2>
                 </div>
-                <hr>
+              </div>
+            </div>
+            <div class="column is-half">
+              <div class="box">
+                <h1 class="title has-text-black-ter is-size-3 mt-4">Toggle</h1>
                 <!-- toolbar icon -->
                 <div>
                   <h2 class="title has-text-dark is-size-6 columns">
