Fixed chrome://extensions urls in options.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -129,7 +129,7 @@
                   <span class="has-text-info">*</span> To use this feature, <em>Allow access to file URLs</em> needs
                   to be enabled in the RetroTxt
                   permissions<br>
-                  <code>chrome://extensions?id=lenecnejdllmdgbhegplikofelapmlhf</code>
+                  <code class="details-detail-url"></code>
                 </p>
               </div>
             </div>
@@ -3923,7 +3923,7 @@
                         To turn off this feature, <span class="has-text-weight-bold">Allow access to file URLs</span>
                         needs to be disabled in the RetroTxt permissions.
                       </p>
-                      <p class="mt-2 is-size-7 is-hidden"><code id="linkToDetails"></code></p>
+                      <p class="mt-2 is-size-7 is-hidden"><code class="details-detail-url"></code></p>
                     </div>
                   </h2>
                 </div>
@@ -4018,15 +4018,14 @@
                       <p class="subtitle has-text-dark is-size-7 has-text-justified mb-0">
                         RetroTxt will monitor all downloads to open saved text files.
                         The browser decides which files are text.
-                        <span class="has-text-warning-dark"> The feature may display
-                          duplicate ghost transfers in the Downloads tab.</span>
                       </p>
                       <p class="subtitle has-text-weight-bold has-text-dark mb-0 is-size-7">recommend <span
                           class="has-text-grey">off</span></p>
-                      <p name="is-off" class="is-hidden has-text-warning-dark has-text-weight-normal mt-2 is-size-7">
-                        This feature is locked and off as the
-                        <span class="has-text-weight-bold">Allow access to file URLs</span>
-                        in the installed extension details is disabled.
+                      <p name="is-off" class="is-hidden has-text-info has-text-weight-normal mt-2 is-size-7">
+                        To use this feature, <span class="has-text-weight-bold">Allow access to file URLs</span>
+                        needs to be enabled in the RetroTxt permissions.
+                      </p>
+                      <p class="mt-2 is-size-7 is-hidden"><code class="details-detail-url" id="monitorDownloads"></code>
                       </p>
                     </div>
                     <div class="column is-2">
