fixed new update/install links.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4112,10 +4112,10 @@
                       <use xlink:href="../assets/svg/material-icons.svg#autorenew"></use>
                     </svg> &nbsp;Reload</a>
                 </li>
-                <li id="">
+                <li id="newInstall" style="display: none;">
                   <a href="#newinstall">New install</a>
                 </li>
-                <li id="">
+                <li id="newUpdate">
                   <a href="#update">New update</a>
                 </li>
               </ul>
