Increased size of fonts on notices.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -94,10 +94,13 @@
             <div class="notice" style="display: none;" id="updateNotice">
               <div class="notification is-info">
                 <button id="updateNoticeBtn" class="delete" title="Close update tab"></button>
-                RetroTxt is up to date! <a href="#top" id="changesLink">See what is new</a>
-                <p>RetroTxt v5 is using the new API, <a
-                    href="https://developer.chrome.com/blog/mv2-transition/">Manifest V3</a></p>
-                <p>Unfortunately, this mandatory change means <em>some prior settings might be lost</em>
+                <p class="mb-2 is-size-2"><strong>RetroTxt is up to date</strong></p>
+                <p class="mt-2 is-size-5"><a href="#top" id="changesLink">See what is new</a></p>
+                <p class="mt-2 is-size-5">RetroTxt v5 is using the new <a
+                    href="https://developer.chrome.com/blog/mv2-transition/">Manifest
+                    V3</a> API</p>
+                <p class="mt-2 is-size-5">Unfortunately, this mandatory change means
+                  <em>some prior settings from RetroTxt v4 might be lost</em>
               </div>
               <div class="notification is-primary" id="enjoyRetroTxt">
                 <p id="5starChrome" style="display: none;">
@@ -114,13 +117,18 @@
             </div>
             <div class="notice" style="display: none;" id="newInstallNotice">
               <div class="notification is-success is-light">
-                <p class="mb-2"><strong>Getting started with RetroTxt</strong></p>
-                <p class="mt-2"><a id="newInstallSamples">There are dozens of sample text art files</a> to try
-                  with this RetroTxt installation
+                <p class="mb-2 is-size-2"><strong>Getting started</strong></p>
+                <p class="mt-2 is-size-5"><a id="newInstallSamples">There are dozens of sample text art files</a> to try
+                  with RetroTxt!
                 </p>
-                <p class="mt-2"><a id="newInstallFonts">Choose a retro or modern font</a> for viewing text files</p>
-                <p class="mt-2">
-                  You can use RetroTxt as a local text file viewer<span class="has-text-info">*</span><br>
+                <br>
+                <p class="mt-2 is-size-5"><a id="newInstallFonts">Choose a retro or modern font</a> for viewing text
+                  files</p>
+                <br>
+                <p class="mt-2 is-size-5">
+                  You can use RetroTxt as a local text file viewer<span class="has-text-info">*</span>
+                </p>
+                <p>
                   Either, drag-and-drop text files to this browser<br>
                   Or use the <code class="file-url-scheme">file:///</code> URL scheme in a tab
                 </p>
