Removed white bg on code sample.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -680,7 +680,7 @@
               </div>
               <div class="column">
                 <!-- Sample text -->
-                <div class="container is-full has-background-white is-rounded" id="sampleContainer">
+                <div class="container is-full is-rounded" id="sampleContainer">
                   <pre id="sampleTerminal" class="is-full">
 
  ┌─────────────────────────────────────────────
