fixed Viznut link.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -256,7 +256,8 @@
                         </a>
                       </li>
                       <li>
-                        <a href="http://pelulamu.net/unscii"><strong>Viznut</strong>, Unscii</a>
+                        <a href="http://viznut.fi/unscii/"><strong>Viznut</strong>,
+                          Unscii</a>
                       </li>
                       <li>
                         <a href="http://monafont.sourceforge.net/index-e.html"><strong>Yasuyuki Furukawa</strong>,
