Fixed Accurate 9px EGA/VGA fonts.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -3427,8 +3427,9 @@
                   <h2 class="title has-text-dark is-size-6 columns">
                     <div class="column">Accurate 9px EGA/VGA fonts
                       <p class="subtitle has-text-dark is-size-7 mb-0 has-text-justified">
-                        Use the original 9-pixel wide, EGA, and VGA fonts found on the IBM graphic hardware.
-                        These can introduce unintended vertical gaps in both blocks and shaded artworks.<br>
+                        Use original 9-pixel wide, EGA, and VGA fonts to simulate the IBM graphic hardware.
+                        This setting does not affect 8px wide fonts but can introduce unintended vertical gaps in blocks
+                        and shaded artworks.<br>
                         Nearly all modern software that simulates the DOS typeface use 8-pixel width fonts sourced from
                         the <a href="https://github.com/perillamint/dkbfnts/blob/master/fntcol16/COPYLEFT.TXT"
                           class="has-text-link-dark">Joseph (Yossi) Gil font collection</a>. When scaled to 9 pixels,
@@ -3441,7 +3442,7 @@
                       <p class="font-ibm_vga_9x16-example has-text-weight-normal">
                         &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
                         ABCabc&nbsp;</p>
-                      <p class="is-size-7 mt-2 mb-1">accurate fonts off <small>scaled VGA 8x16 font</small></p>
+                      <p class="is-size-7 mt-2 mb-1">accurate fonts off <small>using a scaled VGA 8x16 font</small></p>
                       <p class="font-ibm_vga_9x16 has-text-weight-normal">
                         &nbsp;◘░░░▒▒▒▓▓▓███▄▐▌▀███■
                         ABCabc&nbsp;</p>
