Tests remote link.

--- a/ext/html/options.html
+++ b/ext/html/options.html
@@ -4077,10 +4077,13 @@
                       <use xlink:href="../assets/svg/material-icons.svg#autorenew"></use>
                     </svg> &nbsp;Reload</a>
                 </li>
+                <li id="testServe" style="display: none;">
+                  <a href="https://retrotxt.com/test/">Tests remote</a>
+                </li>
                 <li id="newInstall" style="display: none;">
                   <a href="#newinstall">New install</a>
                 </li>
-                <li id="newUpdate">
+                <li id="newUpdate" style="display: none;">
                   <a href="#update">New update</a>
                 </li>
               </ul>
